<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    >

    <TextView
        android:layout_weight="1"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAllCaps="false"
        android:text="@string/result_title"
        android:textColor="@color/colorDeepGrey"
        />
    <RadioGroup
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/idActResultRdbShowAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_show_all"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/idActResultRdbShowRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_show_right"/>
        <RadioButton
            android:id="@+id/idActResultRdbShowWrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_show_wrong"/>
        <RadioButton
            android:id="@+id/idActResultRdbShowSortA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_show_sort_a"/>
        <RadioButton
            android:id="@+id/idActResultRdbShowSortD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_show_sort_d"/>
    </RadioGroup>
    <ListView
        android:id="@+id/idActResultLvResult"
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    </ListView>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/result_register"
            />
        <EditText
            android:id="@+id/idActResultEtName"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/result_score"
            />
        <TextView
            android:id="@+id/idActResultTvScore"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/idActResultBtnShow"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAllCaps="false"
        android:text="@string/result_show"
        />
    <Button
        android:id="@+id/idActResultBtnBack"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAllCaps="false"
        android:text="@string/result_back"
        />
</LinearLayout>