<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/colorMainBackground"
    >
    <TextView
        android:layout_weight="1"
        android:id="@+id/idActMainTvTitle"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/app_title"
        android:textColor="@color/colorBrightYellowText"
        />
    <EditText
        android:id="@+id/idActMainEtResult"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text=""
        android:background="@color/colorGreyText"
        android:textColor="@color/colorBrightYellowText"
        />
    <TextView
        android:id="@+id/idActMainAlgebraExp"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@color/colorBrightYellowText"

        android:gravity="center"
        />
    <LinearLayout
        android:layout_weight="6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp">
                <Button
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape"
                    android:text="1"
                    />
                <Button
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape"
                    android:text="2"
                    />
                <Button
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape"
                    android:text="3"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/shape"
                android:text="4"
                />
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/shape"
                android:text="5"
                />
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/shape"
                android:text="6"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/shape"
                android:text="7"
                />
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/shape"
                android:text="8"
                />
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/shape"
                android:text="9"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/shape"
                android:text="@string/main_dot"
                />
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/shape"
                android:text="0"
                />
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/shape"
                android:text="@string/main_minus"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/shape"
                android:text="@string/main_generate"
                />
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/shape"
                android:text="@string/main_validate"
                />
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/shape"
                android:text="@string/main_clear"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/shape"
                android:text="@string/result_score"
                />
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/shape"
                android:text="@string/main_finish"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>